# Agentic_Chatbot_Application

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml  frontend-deploy.yml
docker/: Dockerfile.app  Dockerfile.service
src/: streamlit_app.py
src/agents/: __init__.py  agents.py  chatbot_with_memory.py  research_assistant.py  web_search_chatbot.py
src/core/: llm.py  settings.py
src/db/: bootstrap.py  engine.py  index.py  setup.py  vector_store.py
src/memory/: embeddings.py  planner.py  postgres.py  query_analyzer.py
src/schema/: models.py  schema.py
src/service/: service.py
